# drylab-python

./: .gitignore  README.md  __init__.py  demo.db  ledger.py  omics.db  pyproject.toml  reactor.py  schema_registry.py  types.py
drylab/: __init__.py  ledger.py  pipeline.py  reactor.py  schema_registry.py  types.py  validators.py
drylab/llm/anthropic/: claude.py
drylab/llm/google/: gemini.py
drylab/llm/openai/: gpt.py
drylab/llms/: claude.py  env.py  gemini.py  gpt.py
drylab/schemas/: COUNTS_MATRIX.v1.json  DEG_TABLE.v1.json  ENRICH_TABLE.v1.json  FASTQ_RAW.v1.json  GEMINI_CHAT.v1.json  OMICS_REPORT_MD.v1.json  README.md  RMSD_CSV.v1.json  SEQ_PDB.v1.json
examples/: dummy_workflow.py
tests/: dummy_omics.py  dummy_workflow.py
