[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name            = "drylab"
version         = "0.0.1"
description     = "event‑sourced lab‑automation core"
authors         = [ { name = "Drylab", email = "effie@effie.bio" } ]
readme          = "README.md"
requires-python = ">=3.10"
dependencies    = [
  "pydantic>=2.6",
  "sqlite-utils>=3.35",
  "jsonschema>=4.22",
]

[project.urls]
Homepage = "https://drylab.bio"

[tool.hatch.build.targets.sdist]
include = ["drylab/schemas/*.json"]
[tool.hatch.build.targets.wheel]
include = ["drylab/schemas/*.json"]